Readded line for rogue / bard skill up macro

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -2264,7 +2264,9 @@
         <input type="radio" name="attr_tab15" class="sheet-tab sheet-tab60" value="2"/><span class="sheet-tab sheet-tab60">S.P./D.S.</span><br><br>
 
     <div class="sheet-tab-content sheet-section-rogue-standard"><h4><b>Standard</b></h4><br>
-<h4><b>Backstab Multiplier:</b></h4><input type="text" name="attr_backstabmultiplier" title="@{backstabmultiplier}"class="tiny">&nbsp;&nbsp;<h4><b>Please input a similar macro (see below) here:<input type="text" name="attr_rogue-level-base" title="@{rogue-level-base}" class="sheet-display" value="30+(30*@{level-class1})"></b></h4>
+<h4><b>Backstab Multiplier:</b></h4><input type="text" name="attr_backstabmultiplier" title="@{backstabmultiplier}" class="tiny">&nbsp;&nbsp;<h4><b>Please input a similar macro (see below) here:<input type="text" name="attr_rogue-level-base" title="@{rogue-level-base}" class="sheet-display" value="30+(30*@{level-class1})"></b></h4>
+        <br>
+        <h4><b>Rogue: 30+(30*@{level-class#}) Bard: 5+(15*@{level-class#}) etc</b></h4>
             <br>
             <br>
 <table style='border-collapse: collapse; border-spacing: 0;'>
@@ -2695,7 +2697,7 @@
     </div>
     
     <div class="sheet-tab-content sheet-section-rogue-spds"><h4><b>Skill and Powers<br>Dark Sun</b></h4><br>
-<h4><b>Backstab Multiplier:</b></h4><input type="text" name="attr_backstabmultiplier" title="@{backstabmultiplier}"class="tiny">&nbsp;&nbsp;<h4><b>Please input a similar macro (see below) here:<input type="text" name="attr_rogue-level-base" title="@{rogue-level-base}" class="sheet-display" value="30+(30*@{level-class1})"></b></h4><br><h4><b>Rogue: 30+(30*@{level-class#}) Bard: 5+(15*@{level-class#}) etc</b></h4><br><h4><b>**Do not apply "No Armor" bonuses! Only apply Armor Penalties!</b></h4><br>
+<h4><b>Backstab Multiplier:</b></h4><input type="text" name="attr_backstabmultiplier" title="@{backstabmultiplier}" class="tiny">&nbsp;&nbsp;<h4><b>Please input a similar macro (see below) here:<input type="text" name="attr_rogue-level-base" title="@{rogue-level-base}" class="sheet-display" value="30+(30*@{level-class1})"></b></h4><br><h4><b>Rogue: 30+(30*@{level-class#}) Bard: 5+(15*@{level-class#}) etc</b></h4><br><h4><b>**Do not apply "No Armor" bonuses! Only apply Armor Penalties!</b></h4><br>
 <table style='border-collapse: collapse; border-spacing: 0;'>
     <tr>
             <td></td>
