Moved the title Leather Armor up to be consistent with the other headings

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -2273,7 +2273,7 @@
     <tr>
             <th colspan="6"></th>
             <th><input type="text" class="sheet-min" name="attr_all-thief-points-remain" title="@{all-thief-points-remain}" value="(@{rogue-level-base})-(@{ppl})-(@{oll})-(@{rtl})-(@{msl})-(@{hsl})-(@{dnl})-(@{cwl})-(@{rll})-(@{dml})-(@{dil})-(@{brl})-(@{tul})-(@{ebl})-(@{fdl})-(@{apl})-(@{newskill})" disabled><input type="text" name="attr_newskill" value="0" style="display: none;"></th>
-            <th colspan="2"></th>
+            <th class="sheet-default-header" colspan="2">Leather Armor</th>
             <th class="sheet-default-header" colspan="3">No Armor</th>
             <th class="sheet-default-header" colspan="3">Heavy Armor</th>
     </tr>
@@ -2285,8 +2285,7 @@
             <th class="sheet-default-header">Kit</th>
             <th class="sheet-default-header">Magic</th>
             <th class="sheet-default-header">Level</th>
-            <th class="sheet-default-header">Total</th>
-            <th class="sheet-default-header">Leather Armor</th>
+            <th class="sheet-default-header" colspan="2">Total</th>
             <th class="sheet-default-header">Bonus</th>
             <th class="sheet-default-header" colspan="2">Total</th>
             <th class="sheet-default-header">Penalty</th>
