--- a/Rolemaster-Standard-System/charsheet_RMSS.html
+++ b/Rolemaster-Standard-System/charsheet_RMSS.html
@@ -6,7 +6,7 @@
 <div class="announcement">
 	<div class="table-style">
 		<div class="table-row">
-			<span class="table-data-center" style="color: red;"><b>This Character Sheet Template will be upgraded in about a month.  The lay out will be changing.  Automation will be added.  No data should be lost.  A Set-up Tab will allow you to determine what auto-calculations you would like the sheet to use as well as other options.  See post at <input type="text" value="https://app.roll20.net/forum/post/8471390/rmss-character-sheet-update/?pageforid=8471390#post-8471390" /> on the Roll20 Character Sheets & Compendium Forum for more information.  </b></span>
+			<span class="table-data-center" style="color: red;"><b>This Character Sheet Template will be upgraded sometime after mid May.  The lay out will be changing.  Automation will be added.  No data should be lost.  A Set-up Tab will allow you to determine what auto-calculations you would like the sheet to use as well as other options.  See post at <input type="text" value="https://app.roll20.net/forum/post/8471390/rmss-character-sheet-update/?pageforid=8471390#post-8471390" /> on the Roll20 Character Sheets & Compendium Forum for more information.  </b></span>
 		</div>
 		<div class="table-row">
 			<span class="table-data-center">
