Forbidden Lands v1.67 updates
- Updated the Consumables resource dice reminder used for the Swedish translation.

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -1,4 +1,4 @@
-<!--4/12/20 set sheet version manually with currentVersion in sheetworkers-->
+<!--4/15/20 set sheet version manually with currentVersion in sheetworkers-->
 <input type="hidden" name="attr_version" value="0" />
 <!-- ADDED recalc checkbox to force sheet worker events. temp unhide for testing purposes-->
 <input class="hidden" name="attr_recalc1" type="checkbox" />
@@ -19,20 +19,23 @@
     <span class="announcements-show toggle-dice-only toggle-monster-only" name="attr_version">&nbsp;</span>
     <div class="announcements toggle-dice-only toggle-monster-only">
         <h3 data-i18n="latest-announcements">Latest Announcements</h3>
-        <span class="footer">4/12/20</span>
+        <span class="footer">4/15/20</span>
         <ol style="margin: 0 2em 0 2em; padding: 0 1em 0 3em;">
-            <span>v1.66</span>
-            <li>Increased the range of each d66 dice to allow for custom rolls 0-100(normally, each d6 allows 1-6). While this does not effect the d66 roll on the sheet, it does allow more flexability for custom macros if desired.
-                <br><b>d100 Roll macro example;</b>
-                <br><textarea style="height: auto;">@{selected|whisper_option} &amp;{template:forbiddenlands} {{character_name=@{selected|character_name}}} {{character_id=@{selected|character_id}}} {{name=D100 Roll}} {{d66-die-one=[[ 1 ]] }} {{d66-roll-one=[[ 1d10-1 ]] }} {{d66-die-two=[[ 1 ]] }} {{d66-roll-two=[[ 1d10-1 ]] }}</textarea>
-            </li>
-            <li>Fixed the translation list ordering for Skills and Stockpile.</li>
+            <span>v1.67</span>
+            <li>Updated the Consumables resource dice reminder used for the Swedish translation.</li>
         </ol>
         <br>
         <input type="checkbox" class="announcements-older-show" name="attr_show_announcements_old" value="1" data-i18n-title="old-announcements" />
         <span data-i18n-title="old-announcements">&nbsp;</span>
         <span class="announcements-older-show">
             <ol>
+                <span>v1.66</span>
+                <li>Increased the range of each d66 dice to allow for custom rolls 0-100(normally, each d6 allows 1-6). While this does not effect the d66 roll on the sheet, it does allow more flexability for custom macros if desired.
+                    <br><b>d100 Roll macro example;</b>
+                    <br><textarea style="height: auto;">@{selected|whisper_option} &amp;{template:forbiddenlands} {{character_name=@{selected|character_name}}} {{character_id=@{selected|character_id}}} {{name=D100 Roll}} {{d66-die-one=[[ 1 ]] }} {{d66-roll-one=[[ 1d10-1 ]] }} {{d66-die-two=[[ 1 ]] }} {{d66-roll-two=[[ 1d10-1 ]] }}</textarea>
+                </li>
+                <li>Fixed the translation list ordering for Skills and Stockpile.</li>
+
                 <span>v1.65</span>
                 <li>Added Misc Gear modifier to Skills.</li>
                 <li>All Attributes are now "rollable".</li>
@@ -3313,7 +3316,7 @@
     /* version tracking */
     var Sheet = Sheet || (function () {
     
-        let currentVersion = 1.66,
+        let currentVersion = 1.67,
     
             newAnnouncement = function (v) {
                 getAttrs(["version", "show_announcements"], function (values) {
