Changed Padded Leather to Padded Armor

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -2486,14 +2486,14 @@
             <br>
             <div class="sheet-3colrow">
                     <div class="sheet-col">
-                            <h4><b>A theif can wear Leather Armor (AC 8), Padded Leather (AC 8), Studded Leather (AC 7), or Elven Chain Mail (AC 5)</b></h4>
+                            <h4><b>A theif can wear Leather Armor (AC 8), Padded Armor (AC 8), Studded Leather (AC 7), or Elven Chain Mail (AC 5)</b></h4>
                             <br>
                             <h4><b>Thieving Skill Armor Adjustments</b></h4>
                             <table>
                                     <tr>
                                             <th>Skill</th>
                                             <th class="sheet-centering-padding-left">No Armor</th>
-                                            <th class="sheet-centering-padding-left">Padded or<br>Studded Leather</th>
+                                            <th class="sheet-centering-padding-left">Padded Armor or Studded Leather</th>
                                             <th class="sheet-centering-padding-left">Elven Chain Mail</th>
                                     </tr>
                                     <tr>
