--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6661,13 +6661,13 @@
                         <!-- Powers Section Config window -->
                         <input type="checkbox" class="sheet-showpowerconfig" name="attr_showpowersectionconfig" value="show" style="display:none;" />
                         <div class="sheet-powerconfig">
-                            <label class="sheet-powerconfiglabel"><span data-i18n="ab-section-header">Section Header: </span><input type="text" data-i18n="powers" name="attr_powerlabelplural" value="Powers" /></label>
-                            <label class="sheet-powerconfiglabel"><span data-i18n="ab-column-header">Column Header: </span><input type="text" data-i18n="power" name="attr_powerlabelsingular" value="Power" /></label>
-                            <label class="sheet-powerconfiglabel"><span data-i18n="ab-pp">Power Points Abbreviation: </span><input type="text"  data-i18n="power-point-abbr-u" name="attr_ppabbr" value="PP" maxlength="8" /></label>
+                            <label class="sheet-powerconfiglabel"><span data-i18n="ab-section-header">Section Header: </span><input type="text" data-i18n-value="powers" name="attr_powerlabelplural" value="Powers" /></label>
+                            <label class="sheet-powerconfiglabel"><span data-i18n="ab-column-header">Column Header: </span><input type="text" data-i18n-value="power" name="attr_powerlabelsingular" value="Power" /></label>
+                            <label class="sheet-powerconfiglabel"><span data-i18n="ab-pp">Power Points Abbreviation: </span><input type="text"  data-i18n-value="power-point-abbr-u" name="attr_ppabbr" value="PP" maxlength="8" /></label>
                             <hr />
                             <input type="hidden" class="sheet-showmultipleabs" name="attr_numberofabs" value="1" />
                             <label class="sheet-powerconfiglabel sheet-label1"><span data-i18n="ab-name">Arcane Background: </span><input type="text" name="attr_ablabel" value="AB 1" maxlength="25" /></label>
-                            <label class="sheet-powerconfiglabel sheet-label1"><span data-i18n="ab-pp-name">Power Points Label: </span><input type="text" data-i18n="power-points" name="attr_ppelabel" value="Power Points" maxlength="30" /></label>
+                            <label class="sheet-powerconfiglabel sheet-label1"><span data-i18n="ab-pp-name">Power Points Label: </span><input type="text" data-i18n-value="power-points" name="attr_ppelabel" value="Power Points" maxlength="30" /></label>
                             <label class="sheet-powerconfiglabel sheet-label2"><span data-i18n="ab-color-indicator">Arcane Background Indicator:</span>
                                 <div class="sheet-container">
                                     <div class="sheet-child2">
@@ -6687,7 +6687,7 @@
                             </label>
                             <hr class="sheet-label2" />
                             <label class="sheet-powerconfiglabel sheet-label2"><span data-i18n="ab-name">Arcane Background: </span><input type="text" name="attr_ablabel2" value="AB 2" maxlength="25" /></label>
-                            <label class="sheet-powerconfiglabel sheet-label2"><span data-i18n="ab-pp-name">Power Points Label: </span><input type="text" data-i18n="power-points" name="attr_pplabel2" value="Power Points" maxlength="30" /></label>
+                            <label class="sheet-powerconfiglabel sheet-label2"><span data-i18n="ab-pp-name">Power Points Label: </span><input type="text" data-i18n-value="power-points" name="attr_pplabel2" value="Power Points" maxlength="30" /></label>
                             <label class="sheet-powerconfiglabel sheet-label2"><span data-i18n="ab-color-indicator">Arcane Background Indicator:</span>
                                 <div class="sheet-container">
                                     <div class="sheet-child2">
@@ -6707,7 +6707,7 @@
                             </label>
                             <hr class="sheet-label3" />
                             <label class="sheet-powerconfiglabel sheet-label3"><span data-i18n="ab-name">Arcane Background: </span><input type="text" name="attr_ablabel3" value="AB 3" maxlength="25" /></label>
-                            <label class="sheet-powerconfiglabel sheet-label3"><span data-i18n="ab-pp-name">Power Points Label: </span><input type="text" data-i18n="power-points"  name="attr_pplabel3" value="Power Points" maxlength="30" /></label>
+                            <label class="sheet-powerconfiglabel sheet-label3"><span data-i18n="ab-pp-name">Power Points Label: </span><input type="text" data-i18n-value="power-points"  name="attr_pplabel3" value="Power Points" maxlength="30" /></label>
                             <label class="sheet-powerconfiglabel sheet-label3"><span data-i18n="ab-color-indicator">Arcane Background Indicator:</span>
                                 <div class="sheet-container">
                                     <div class="sheet-child2">
@@ -6727,7 +6727,7 @@
                             </label>
                             <hr class="sheet-label4" />
                             <label class="sheet-powerconfiglabel sheet-label4"><span data-i18n="ab-name">Arcane Background: </span><input type="text" name="attr_ablabel4" value="AB 4" maxlength="25" /></label>
-                            <label class="sheet-powerconfiglabel sheet-label4"><span data-i18n="ab-pp-name">Power Points Label: </span><input type="text" data-i18n="power-points" name="attr_pplabel4" value="Power Points" maxlength="30" /></label>
+                            <label class="sheet-powerconfiglabel sheet-label4"><span data-i18n="ab-pp-name">Power Points Label: </span><input type="text" data-i18n-value="power-points" name="attr_pplabel4" value="Power Points" maxlength="30" /></label>
                             <label class="sheet-powerconfiglabel sheet-label4"><span data-i18n="ab-color-indicator">Arcane Background Indicator:</span>
                                 <div class="sheet-container">
                                     <div class="sheet-child2">
@@ -6747,7 +6747,7 @@
                             </label>
                             <hr class="sheet-label5" />
                             <label class="sheet-powerconfiglabel sheet-label5"><span data-i18n="ab-name">Arcane Background: </span><input type="text" name="attr_ablabel5" value="AB 5" maxlength="25" /></label>
-                            <label class="sheet-powerconfiglabel sheet-label5"><span data-i18n="ab-pp-name">Power Points Label: </span><input type="text" data-i18n="power-points"  name="attr_pplabel5" value="Power Points" maxlength="30" /></label>
+                            <label class="sheet-powerconfiglabel sheet-label5"><span data-i18n="ab-pp-name">Power Points Label: </span><input type="text" data-i18n-value="power-points"  name="attr_pplabel5" value="Power Points" maxlength="30" /></label>
                             <label class="sheet-powerconfiglabel sheet-label5"><span data-i18n="ab-color-indicator">Arcane Background Indicator:</span>
                                 <div class="sheet-container">
                                     <div class="sheet-child2">
