Sheet compliance changes.

--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -1,20 +1,15 @@
 ﻿<script type="text/worker">
 	var styleCount = 5; // THIS NUMBER MUST BE EQUAL TO THE NUMBER OF COLOR SETTINGS
 	on("change:sheetstyle sheet:opened", function(event) {
-		console.log("changing style ",event);
 		var styleAttrs = {};
 
 		for(i = 0; i < styleCount; i++){
 			styleAttrs["styleset"+i]="off";
 		}
 		
-		console. log(styleAttrs);
-
 		getAttrs(["sheetstyle"] ,function(values) {
-			console.log(values);
 			var on = values.sheetstyle;
 			styleAttrs["styleset"+on]="on";
-			console. log(styleAttrs);
 			setAttrs(styleAttrs);
 		});
 	});
@@ -6605,15 +6600,15 @@
 		        </div><!-- end stat modifier options -->
 		        <div class="option-container">
 		            <h4>Sheet Style</h4>
+					<span>Selects a visual style for the character sheet</span>
 		            <div>
     		            <select name="attr_sheetstyle"/>
-						  <option value="0" selected="selected">Green</option> <!-- Color Style options, remember to add one to add a new option-->>
+						  <option value="0" >Green</option> <!-- Color Style options, remember to add one to add a new option-->>
 						  <option value="1">Blue</option>
 						  <option value="2">Beige</option>
 						  <option value="3">Gray</option>
-						  <option value="4">Classic White</option>
+						  <option value="4"selected="selected">Classic White</option>
 						</select>
-        				<span>Selects a visual style for the character sheet</span>
     				</div>
 		        </div><!-- end style selector options -->
 			</div><!-- end option-column -->
