Salvo Overlay Setup
Began set up of the Salvo Overlay with a transparent backgound that ensures that you can see the overlay and not access the underlaying sheet.
Fixed the green on the ship configuration
Fixed the size of the retirment plan box

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -23,9 +23,9 @@
 				</optgroup>
 			</select>
 		</h3>
-		<div class="version">Version 2.10</div>
+		<div class="version">Version 2.30</div>
 	</div>
-
+	<!--Hidden Sheet Selection Radio switch-->
 	<input type="radio" name="attr_selectedSheet" class="hidden crewmemberSelector" value="1" checked="checked">
 	<input type="radio" name="attr_selectedSheet" class="hidden shipSelector" value="2">
 	<input type="radio" name="attr_selectedSheet" class="hidden sophontSelector" value="3">
@@ -48,33 +48,90 @@
 			<div class="salvoTitle">Salvo</div>
 			<div class="taskDice">
 				<div class="taskTitle">Task Dice</div>
+				<!--Skill Selector-->
 				<div>Skill</div>
 				<select name="attr_salvoSkill" class="">
 					<option value="0"></option>
 					<optgroup label="Communications">
 						<option value="1">Culture</option>
+						<option value="2">Economy</option>
+						<option value="3">Interface</option>
+						<option value="4">Politic</option>
+						<option value="5">Sophontolgy</option>
+					</optgroup>
+					<optgroup label="Operations">
+						<option value="6">Athletics</option>
+						<option value="7">Fitness</option>
+						<option value="8">Geosciences</option>
+						<option value="9">Perception</option>
+						<option value="10">Pilot</option>
+					</optgroup>
+					<optgroup label="Engineering">
+						<option value="11">Biosciences</option>
+						<option value="12">Field Dynamics</option>
+						<option value="13">Pulse Projection</option>
+						<option value="14">Inscription</option>
+						<option value="15">Mechatronics</option>
 					</optgroup>
 				</select>
+				<!--Hidden Skill Selection Radio switch-->
+				<input type="radio" name="attr_salvoSkill" class="hidden" value="0" checked="checked">
+				<input type="radio" name="attr_salvoSkill" class="hidden cultureSelector" value="1">
+				<input type="radio" name="attr_salvoSkill" class="hidden economySelector" value="2">
+				<input type="radio" name="attr_salvoSkill" class="hidden interfaceSelector" value="3">
+				<input type="radio" name="attr_salvoSkill" class="hidden politicSelector" value="4">
+				<input type="radio" name="attr_salvoSkill" class="hidden sophontolgySelector" value="5">
+				<input type="radio" name="attr_salvoSkill" class="hidden athleticsSelector" value="6">
+				<input type="radio" name="attr_salvoSkill" class="hidden fitnessSelector" value="7">
+				<input type="radio" name="attr_salvoSkill" class="hidden geosciencesSelector" value="8">
+				<input type="radio" name="attr_salvoSkill" class="hidden perceptionSelector" value="9">
+				<input type="radio" name="attr_salvoSkill" class="hidden pilotSelector" value="10">
+				<input type="radio" name="attr_salvoSkill" class="hidden biosciencesSelector" value="11">
+				<input type="radio" name="attr_salvoSkill" class="hidden fieldDynamicsSelector" value="12">
+				<input type="radio" name="attr_salvoSkill" class="hidden pulseProjectionSelector" value="13">
+				<input type="radio" name="attr_salvoSkill" class="hidden inscriptionSelector" value="14">
+				<input type="radio" name="attr_salvoSkill" class="hidden mechatronicsSelector" value="15">
+
 				<div>Specialty</div>
 				<select name="attr_salvoSpecialty" class="">
 					<option value="0"></option>
-					<option value="1">Culture</option>
-					<option value="2">Culture</option>
-					<option value="3">Culture</option>
+					<option value="1" class="specialtyChoice cultureSpecialties">Anthropology</option>
+					<option value="2" class="specialtyChoice cultureSpecialties">History</option>
+					<option value="3" class="specialtyChoice cultureSpecialties">Lingustics</option>
+					<option value="4" class="specialtyChoice economySpecialties">Accounting</option>
+					<option value="5" class="specialtyChoice economySpecialties">Commerce</option>
+					<option value="6" class="specialtyChoice economySpecialties">Trade</option>
 				</select>
-				<input type="checkbox" name="attr_spendCharge"/>
+				<input type="checkbox" name="attr_spendCharge" />
 				<select name="attr_salvoScale" class="">
 					<optgroup label="Scale">
 						<option value="0">Away</option>
 						<option value="1">Space</option>
 					</optgroup>
 				</select>
+				<input type="radio" name="attr_salvoScale" class="hidden awaySelector" value="0" checked="checked">
+				<input type="radio" name="attr_salvoScale" class="hidden spaceSelector" value="1">
 				<div>Tool</div>
 				<select name="attr_salvoTool" class="">
 					<option value="0"></option>
-					<option value="1">Culture</option>
-					<option value="2">Culture</option>
-					<option value="3">Culture</option>
+					<optgroup label="Scanner" class="scaleChoice awayTools">
+						<option value="1">Survey Sensor</option>
+						<option value="2">Depth Analyser</option>
+						<option value="3">Area Effect</option>
+						<option value="4">Range Compensator</option>
+					</optgroup>
+					<optgroup label="Sensors" class="scaleChoice spaceTools">
+						<option value="21">Survey Sensor</option>
+						<option value="22">Depth Analyser</option>
+						<option value="23">Area Effect</option>
+						<option value="24">Range Compensator</option>
+					</optgroup>
+					<optgroup label="Grav Drive" class="scaleChoice spaceTools">
+						<option value="25">Atmospheric Thrusters</option>
+						<option value="26">Orbital Injectors</option>
+						<option value="27">Fold Inducer</option>
+						<option value="28">Wake Generator</option>
+					</optgroup>
 				</select>
 				<div>Advantage</div>
 			</div>
