Bugfix: Evade was wrong

--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -7754,7 +7754,7 @@
 						</div>
 						<div class="sheet-humanoid">
 							<div style="display:inline-block; width:9em;" data-i18n="Ausweichen:">Ausweichen:</div>
-							<input type="number" name="attr_Ausweichen_Kampf" style='width: 3em' value="@{Ausweichen_Wert} - @{Ges_BE} + @{Zustand_Mod_max_abzl_BE}" disabled="true">
+							<input type="number" name="attr_Ausweichen_Kampf" style='width: 3em' value="@{Ausweichen_Wert} + @{Zustand_Mod_max_inkl_BE}" disabled="true">
 							<button class="sheet-roll" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=Ausweichen}} {{subtags=Nahkampf}} {{wurf=[[1d20cs1cf20]]}} {{wert=[[(@{Ausweichen_Kampf})+@{mod_option}]]}} {{mod=[[(@{mod_option})]]}}" />
 							<button class="sheet-roll" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=2. Ausweichen}} {{subtags=Nahkampf}} {{wurf=[[1d20cs1cf20]]}} {{wert=[[(@{Ausweichen_Kampf})-3+@{mod_option}+(1*@{sf_meisterliches_ausweichen})]]}} {{mod=[[-3+@{mod_option}+(1*@{sf_meisterliches_ausweichen})]]}}" data-i18n="2.">2.</button>
 							<button class="sheet-roll" type="roll" value="@{output_option} &{template:DSA-Nahkampf-VE} {{name=3. Ausweichen}} {{subtags=Nahkampf}} {{wurf=[[1d20cs1cf20]]}} {{wert=[[(@{Ausweichen_Kampf})-6+@{mod_option}+(2*@{sf_meisterliches_ausweichen})]]}} {{mod=[[-6+@{mod_option}+(2*@{sf_meisterliches_ausweichen})]]}}" data-i18n="3.">3.</button>
@@ -18858,7 +18858,7 @@ on("change:ge_wert change:optpa_gw change:sf_verb_ausweichen_1 change:sf_verb_au
 			var optPA = parseInt(values.optPA_GW);
 			var sf_verb_ausweichen = parseInt(values.sf_verb_ausweichen_1) + parseInt(values.sf_verb_ausweichen_2) + parseInt(values.sf_verb_ausweichen_3);
 			var Ges_BE = parseInt(values.Ges_BE);
-			setAttrs({ Ausweichen_Wert: Math.round(GE_Wert / 2) + (optPA / 2) + sf_verb_ausweichen - Ges_BE });
+			setAttrs({ Ausweichen_Wert: Math.round(GE_Wert / 2) + (optPA / 2) + sf_verb_ausweichen });
 		}
 	});
 });
