fix Krewe trait label to not show for geist2-organization

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -307,7 +307,7 @@
             <span class="promethean1" data-i18n="athanor" >Athanor:</span>
             <span class="promethean2" data-i18n="role" >Role:</span>
             <span class="changeling" data-i18n="court" >Court:</span>
-            <span class="geist" data-i18n="krewe-c" >Krewe:</span>
+            <span class="geist1 geist2" data-i18n="krewe-c" >Krewe:</span>
             <span class="mummy" data-i18n="judge" >Judge:</span>
             <span class="demon" data-i18n="catalyst" >Catalyst:</span>
             <span class="beast" data-i18n="horror" >Horror:</span>
