Add missing field for Part d'Ombre

--- a/WorldOfLies/world-of-lies.html
+++ b/WorldOfLies/world-of-lies.html
@@ -134,11 +134,13 @@
             <label class="sheet-class-moves sheet-section-title"><span data-i18n="specialities">Spécialités</span>:</label>
             <div class="sheet-attr-box">
               <fieldset class="repeating_moves">
-	        <label class="sheet-movename"><span data-i18n="speciality">Specialité</span>:</label><br/>
-		<textarea rows="2" cols="50" name="attr_speciality"></textarea>
-	        </select>
-	    </fieldset>
-	    </div>
+	            <label class="sheet-movename"><span data-i18n="speciality">Specialité</span>:</label><br/>
+		        <textarea rows="2" cols="50" name="attr_speciality"></textarea>
+	          </fieldset>
+	        </div>
+
+
+
         </div> <!-- END COL 1 -->
         <div class="sheet-col even"> <!-- COL 2 -->
             <div class="sheet-box">
@@ -195,6 +197,13 @@
                     <div class="sheet-tension-clock" style="text-align: center"></div>
                 </div>
             </div>
+            <label class="sheet-class-moves sheet-section-title"><span data-i18n="part-ombre">Part d'Ombre</span>:</label>
+            <div class="sheet-attr-box">
+              <fieldset class="repeating_moves">
+	            <label class="sheet-movename"><span data-i18n="part-ombre">Part d'Ombre</span>:</label><br/>
+		        <textarea rows="2" cols="50" name="attr_part_ombre"></textarea>
+	          </fieldset>
+	        </div>
             <label class="sheet-other sheet-section-title"><span data-i18n="gear">Matos</span>:</label>
             <textarea rows="7" cols="50" name="attr_gear"></textarea>
         </div> <!-- END COL 3 -->
