Fix some broken roll_names

--- a/WorldOfLies/world-of-lies.html
+++ b/WorldOfLies/world-of-lies.html
@@ -48,7 +48,7 @@
                 <input type='hidden' name="attr_analyser_hit" value="Vous savez tout ce qu'on peut humainement en savoir dans le temps que vous y consacrez."/>
                 <div class="sheet-roll-box sheet-cf">
                     <label class="sheet-buttonLbl"><span data-i18n="analyser">Analyser</span>:</label>
-                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=analyser}} {{miss_text=@{analyser_fail}}} {{success_text=@{analyser_hit}}} {{partial_text=@{analyser_pass}}} {{roll_mod=@{raison}}} {{result=[[2d6 + @{raison} + @{raison_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_analyser'></button>
+                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=Analyser}} {{miss_text=@{analyser_fail}}} {{success_text=@{analyser_hit}}} {{partial_text=@{analyser_pass}}} {{roll_mod=@{raison}}} {{result=[[2d6 + @{raison} + @{raison_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_analyser'></button>
                 </div>
                 <!-- Soigner -->
                 <input type='hidden' name="attr_soigner_fail" value="Vous lui avez peut être gagné un peu de temps (relancez le dé de blessure)."/>
@@ -56,7 +56,7 @@
                 <input type='hidden' name="attr_soigner_hit" value="L'état de votre patient est stabilisé."/>
                 <div class="sheet-roll-box sheet-cf">
                     <label class="sheet-buttonLbl"><span data-i18n="soigner">Soigner</span>:</label>
-                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=soigner}} {{miss_text=@{soigner_fail}}} {{success_text=@{soigner_hit}}} {{partial_text=@{soigner_pass}}} {{roll_mod=@{raison}}} {{result=[[2d6 + @{raison} + @{raison_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_soigner'></button>
+                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=Soigner}} {{miss_text=@{soigner_fail}}} {{success_text=@{soigner_hit}}} {{partial_text=@{soigner_pass}}} {{roll_mod=@{raison}}} {{result=[[2d6 + @{raison} + @{raison_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_soigner'></button>
                 </div>
 
             </div>
@@ -70,7 +70,7 @@
                 <input type='hidden' name="attr_risque_hit" value="Tout se passe aussi bien que vous l'espériez."/>
                 <div class="sheet-roll-box sheet-cf">
                     <label class="sheet-buttonLbl"><span data-i18n="risque">Prendre un risque</span>:</label>
-                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=risque}} {{miss_text=@{risque_fail}}} {{success_text=@{risque_hit}}} {{partial_text=@{risque_pass}}} {{roll_mod=@{action}}} {{result=[[2d6 + @{action} + @{action_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_risque'></button>
+                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=Prendre un risque}} {{miss_text=@{risque_fail}}} {{success_text=@{risque_hit}}} {{partial_text=@{risque_pass}}} {{roll_mod=@{action}}} {{result=[[2d6 + @{action} + @{action_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_risque'></button>
                 </div>
 		        <!-- Disparaitre -->
                 <input type='hidden' name="attr_disparaitre_fail" value="Vous parvenez à vous échappez."/>
@@ -78,7 +78,7 @@
                 <input type='hidden' name="attr_disparaitre_hit" value="Vous parvenez à vous échappez."/>
                 <div class="sheet-roll-box sheet-cf">
                     <label class="sheet-buttonLbl"><span data-i18n="disparaitre">Disparaitre</span>:</label>
-                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=disparaitre}} {{miss_text=@{disparaitre_fail}}} {{success_text=@{disparaitre_hit}}} {{partial_text=@{disparaitre_pass}}} {{roll_mod=@{action}}} {{result=[[2d6 + @{action} + @{action_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_disparaitre'></button>
+                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=Disparaitre}} {{miss_text=@{disparaitre_fail}}} {{success_text=@{disparaitre_hit}}} {{partial_text=@{disparaitre_pass}}} {{roll_mod=@{action}}} {{result=[[2d6 + @{action} + @{action_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_disparaitre'></button>
                 </div>
             </div>
             <div class="sheet-attr-box">
@@ -90,8 +90,8 @@
                 <input type='hidden' name="attr_self_control_pass" value="Vous parvenez à souffler un peu, mais le stress reste présent (1 pt de Tension)."/>
                 <input type='hidden' name="attr_self_control_hit" value="Vous vous contrôlez et agissez comme bon vous semble."/>
                 <div class="sheet-roll-box sheet-cf">
-                    <label class="sheet-buttonLbl"><span data-i18n="self_control">Disparaitre</span>:</label>
-                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=self_control}} {{miss_text=@{self_control_fail}}} {{success_text=@{self_control_hit}}} {{partial_text=@{self_control_pass}}} {{roll_mod=@{nerfs}}} {{result=[[2d6 + @{nerfs} + @{nerfs_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_self_control'></button>
+                    <label class="sheet-buttonLbl"><span data-i18n="self_control">Self control</span>:</label>
+                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=Self control}} {{miss_text=@{self_control_fail}}} {{success_text=@{self_control_hit}}} {{partial_text=@{self_control_pass}}} {{roll_mod=@{nerfs}}} {{result=[[2d6 + @{nerfs} + @{nerfs_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_self_control'></button>
                 </div>
                 <!-- Résister -->
                 <input type='hidden' name="attr_résister_fail" value="Vous sombrez dans l'inconscience immédiatement."/>
@@ -99,7 +99,7 @@
                 <input type='hidden' name="attr_résister_hit" value="Vous restez conscient, mais, sans soins, vous subissez un désavantage."/>
                 <div class="sheet-roll-box sheet-cf">
                     <label class="sheet-buttonLbl"><span data-i18n="résister">Résister</span>:</label>
-                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=résister}} {{miss_text=@{résister_fail}}} {{success_text=@{résister_hit}}} {{partial_text=@{résister_pass}}} {{roll_mod=@{nerfs}}} {{result=[[2d6 + @{nerfs} + @{nerfs_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_résister'></button>
+                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=Résister}} {{miss_text=@{résister_fail}}} {{success_text=@{résister_hit}}} {{partial_text=@{résister_pass}}} {{roll_mod=@{nerfs}}} {{result=[[2d6 + @{nerfs} + @{nerfs_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_résister'></button>
                 </div>
                 <!-- Récupérer -->
                 <input type='hidden' name="attr_récupérer_fail" value="Vous n'arrivez pas à récupérer (complication potentielle)."/>
@@ -107,7 +107,7 @@
                 <input type='hidden' name="attr_récupérer_hit" value="Vous n'êtes plus traumatisé ou -2pt de Tension."/>
                 <div class="sheet-roll-box sheet-cf">
                     <label class="sheet-buttonLbl"><span data-i18n="récupérer">Récupérer</span>:</label>
-                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=récupérer}} {{miss_text=@{récupérer_fail}}} {{success_text=@{récupérer_hit}}} {{partial_text=@{récupérer_pass}}} {{roll_mod=@{nerfs}}} {{result=[[2d6 + @{nerfs} + @{nerfs_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_récupérer'></button>
+                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=Récupérer}} {{miss_text=@{récupérer_fail}}} {{success_text=@{récupérer_hit}}} {{partial_text=@{récupérer_pass}}} {{roll_mod=@{nerfs}}} {{result=[[2d6 + @{nerfs} + @{nerfs_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_récupérer'></button>
                 </div>
             </div>
             <div class="sheet-attr-box">
@@ -120,7 +120,7 @@
                 <input type='hidden' name="attr_contacter_hit" value="Vous obtenez ce que vous souhaitiez dans un court délai."/>
                 <div class="sheet-roll-box sheet-cf">
                     <label class="sheet-buttonLbl"><span data-i18n="contacter">Contacter</span>:</label>
-                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=contacter}} {{miss_text=@{contacter_fail}}} {{success_text=@{contacter_hit}}} {{partial_text=@{contacter_pass}}} {{roll_mod=@{influence}}} {{result=[[2d6 + @{influence} + @{influence_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_contacter'></button>
+                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=Contacter}} {{miss_text=@{contacter_fail}}} {{success_text=@{contacter_hit}}} {{partial_text=@{contacter_pass}}} {{roll_mod=@{influence}}} {{result=[[2d6 + @{influence} + @{influence_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_contacter'></button>
                 </div>
                 <!-- Manipuler -->
                 <input type='hidden' name="attr_manipuler_fail" value="On refuse ou on accepte pour mieux trahir."/>
@@ -128,7 +128,7 @@
                 <input type='hidden' name="attr_manipuler_hit" value="On fait ce que vous demandez."/>
                 <div class="sheet-roll-box sheet-cf">
                     <label class="sheet-buttonLbl"><span data-i18n="manipuler">Manipuler</span>:</label>
-                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=manipuler}} {{miss_text=@{manipuler_fail}}} {{success_text=@{manipuler_hit}}} {{partial_text=@{manipuler_pass}}} {{roll_mod=@{influence}}} {{result=[[2d6 + @{influence} + @{influence_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_manipuler'></button>
+                    <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=Manipuler}} {{miss_text=@{manipuler_fail}}} {{success_text=@{manipuler_hit}}} {{partial_text=@{manipuler_pass}}} {{roll_mod=@{influence}}} {{result=[[2d6 + @{influence} + @{influence_talent} + ?{Mod |0|-3|-2|-1|1|2|3}]]}}' name='roll_manipuler'></button>
                 </div>
             </div>
             <label class="sheet-class-moves sheet-section-title"><span data-i18n="specialities">Spécialités</span>:</label>
@@ -138,9 +138,6 @@
 		        <textarea rows="2" cols="50" name="attr_speciality"></textarea>
 	          </fieldset>
 	        </div>
-
-
-
         </div> <!-- END COL 1 -->
         <div class="sheet-col even"> <!-- COL 2 -->
             <div class="sheet-box">
